--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,17 +1,17 @@
 <h1>About</h1>
-<h1>hw</h1>
-<h2>w10</h2>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
-<p>12</p>
+<h1>HW</h1>
+<h2>W10</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/920d404bc90cae926a3771ecf2833d2e/raw/c99f375cf5026cce9ea25bcc655472dd0f462334/w10hw1.py">作業1</a></p>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/29e2887902c8e3f2884de50adabb3d35/raw/8819ae03502dcd8a6158d608ae08835930587641/w10hw2.py">作業2</a></p>
+<p>1</p>
 <div>
 <div>
 <div></div>
 </div>
 </div>
-<h2>w11</h2>
-<p><a href="/get_page/Brython?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/cb52e4da895d8d42118de5331085b1943950533a/w11hw.py">作業</a></p>
-<h2>w12</h2>
+<h2>W11</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/eccdd895449705fb3d8d9d795aa85009/raw/cb52e4da895d8d42118de5331085b1943950533a/w11hw.py">作業</a></p>
+<h2>W12</h2>
 <p></p>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
