--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -13,6 +13,7 @@
 <h2>w12</h2>
 <h2>w13</h2>
 <h2>w14</h2>
+<p><a href="https://mdecp2022.github.io/site-41123249/content/Brython.html?src=https://gist.githubusercontent.com/41123249/e1c9ebc8aeaf41e24f63619ca2b54839/raw/dc2723f02e72162b1ddb6feffb5739ac0462e7ce/w14hw.py">作業</a></p>
 <h2>w15</h2>
 <div>
 <ul>
