--- a/config/content.htm
+++ b/config/content.htm
@@ -242,6 +242,9 @@ origx = 1
 origy = 1
 # 利用 grid 函式畫出格線
 grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
+
+doc["power"].bind("click", launchAnimation)
+#browser.timer.set_interval(game, 100)
 </script><h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
