--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -242,10 +242,8 @@ origx = 1
 origy = 1
 # 利用 grid 函式畫出格線
 grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
-
-
-<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
-</script><h1>cp2022</h1>
+</script>
+<h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
