--- a/content/w16.html
+++ b/content/w16.html
@@ -338,6 +338,9 @@ origx = 1
 origy = 1
 # 利用 grid 函式畫出格線
 grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
+
+doc["power"].bind("click", launchAnimation)
+#browser.timer.set_interval(game, 100)
 </script><br />w15 << <a href='w15.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
