--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -421,7 +421,8 @@ grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
 doc["power"].bind("click", launchAnimation)
 #browser.timer.set_interval(game, 100)
 </script>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 這個程式用於 demo 綠色方塊沿著特定網格路徑行走
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">綠色方塊沿著格子走
+# 這個程式用於 demo 綠色方塊沿著特定網格路徑行走
 # 從 Brython 程式庫中的 browser 模組導入 document 類別, 並以簡寫設定為 doc
 from browser import document as doc
 # 從 browser 模組導入 html 類別, 主要用於建立 CANVAS 標註物件, 並插入頁面中
@@ -444,9 +445,7 @@ brython_div &lt;= html.BUTTON("啟動", id="power")
 brython_div &lt;= html.BR()
 
 # 將 canvas 標註放入 brython_div1 所在位置
-# 頁面中原本就已經放入</pre>
-<div id="brython_div"></div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"> 標註
+# 頁面中原本就已經放入
 brython_div &lt;= canvas
 # 將頁面中 id 為 canvas 的 CANVAS 設為與 canvas 變數對應
 canvas = doc["canvas"]
@@ -588,6 +587,93 @@ nowx = 1
 nowy = 1
 stepx = 0
 stepy = 0
+# 設定格數
+# width 方向格子數
+wnum = 15
+# height 方向格子數
+hnum = 15
+# 設定線寬
+pixel = 1
+# 設定 w 寬度
+w = int(canvas.width/wnum) - pixel
+# 設定 h 高度
+h = int(canvas.height/hnum) - pixel
+# 設定繪圖座標點起點位置
+origx = 1
+origy = 1
+# 利用 grid 函式畫出格線
+grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
+
+doc["power"].bind("click", launchAnimation)
+#browser.timer.set_interval(game, 100)</pre>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"> 格線設計
+# 這個程式用於 demo 綠色方塊沿著特定網格路徑行走
+# 從 Brython 程式庫中的 browser 模組導入 document 類別, 並以簡寫設定為 doc
+from browser import document as doc
+# 從 browser 模組導入 html 類別, 主要用於建立 CANVAS 標註物件, 並插入頁面中
+from browser import html
+# 用於定時執行特定函式
+import browser.timer
+# 導入亂數模組
+from random import random, randint
+
+# 利用 html 建立一個 CANVAS 標註物件, 與變數 canvas 對應
+canvas = html.CANVAS(width = 600, height = 600)
+# 將 canvas 標註的 id 設為 "canvas"
+canvas.id = "canvas"
+# 將 document 中 id 為 "brython_div" 的標註 
+# 設為與 brython_div 變數對應
+brython_div = doc["brython_div1"]
+
+# 建立 buttons
+brython_div &lt;= html.BUTTON("啟動", id="power")
+brython_div &lt;= html.BR()
+
+# 將 canvas 標註放入 brython_div1 所在位置
+# 頁面中原本就已經放入
+brython_div &lt;= canvas
+# 將頁面中 id 為 canvas 的 CANVAS 設為與 canvas 變數對應
+canvas = doc["canvas"]
+# 將 canvas 的 2d 繪圖 context 命名為 ctx
+ctx = canvas.getContext("2d")
+
+# 建立一個 dRect() 函式
+# s default 為 1, c defaul 為紅色
+def dRect(lux, luy, w, h, s=1, c='#ff0000'):
+    ctx.lineWidth = s
+    ctx.strokeStyle = c
+    ctx.beginPath();
+    ctx.rect(lux, luy, w, h)
+    ctx.stroke();
+    
+# 建立畫直線函式
+def draw_line(x1, y1, x2, y2, color="#ff0000"):
+    ctx.beginPath()
+    ctx.moveTo(x1, y1)
+    ctx.lineTo(x2, y2)
+    ctx.strokeStyle = color
+    ctx.stroke()
+
+# 建立 write Text 函式
+def wText(x, y, t, s=14, c='#0000ff'):
+    ctx.font = str(s) + "px Arial";
+    ctx.fillText(t, x, y)
+
+# 定義畫格線的函式
+def grid(startx, starty, w, h, wnum, hnum, pixel=1, color="#ff0000"):
+    # 利用迴圈與座標增量繪圖
+    # 因為輸入 wnum 與 hnum 為格子數, 畫格線數則需加上 1
+    for i in range(wnum+1):
+        for j in range(hnum+1):
+            # 畫上下直線
+            yend = starty + h*(hnum)
+            xend = startx + w*(wnum)
+            x = startx + i*w
+            draw_line(x, starty, x, yend, color)
+            # 畫左右直線
+            y = starty + j*h
+            draw_line(startx, y, xend, y, color)
+            #wText(w/2-10, y-w/2, str(j))
 # 設定格數
 # width 方向格子數
 wnum = 15
